--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para mi mejor amiga Yuli ❤️</title>
+    <title>Para Yuli ❤️</title>
     <style>
         /* Importar fuentes elegantes */
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@300;500&display=swap');
@@ -207,8 +207,8 @@
             Sesión de fotos ❤️
         </div>
         <div class="sesion-fotos-portada">
-            <img src="imagenes/Yuli_1.png" alt="Yuli 1">
-            <img src="imagenes/Yuli_2.png" alt="Yuli 2">
+            <img src="Yuli_1.png" alt="Yuli 1">
+            <img src="Yuli_2.png" alt="Yuli 2">
         </div>
     </div>
 
@@ -232,10 +232,10 @@
         </div>
 
         <div class="galeria-interior">
-            <img src="imagenes/Yuli_3.jpeg" alt="Recuerdo 3">
-            <img src="imagenes/Yuli_4.jpeg" alt="Recuerdo 4">
-            <img src="imagenes/Yuli_5.jpeg" alt="Recuerdo 5">
-            <img src="imagenes/Yuli_6.jpeg" alt="Recuerdo 6">
+            <img src="Yuli_3.jpeg" alt="Recuerdo 3">
+            <img src="Yuli_4.jpeg" alt="Recuerdo 4">
+            <img src="Yuli_5.jpeg" alt="Recuerdo 5">
+            <img src="Yuli_6.jpeg" alt="Recuerdo 6">
         </div>
 
         <p class="corazones">💖✨💐🥂⭐</p>
